--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+h6 {
+  display: inline;
+}
+ul {
+  list-style: none;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
